<resources>
    <string name="app_name">PhoneQueue</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <!-- Buttons -->
    <string name="clear_all">Clear All</string>
    <string name="add_number">Add</string>
    <string name="clear_entry">Clear\nEntry</string>
    <string name="backspace">Back\nSpace</string>

    <!-- Num Pad -->
    <string name="num_zero">0</string>
    <string name="num_one">1</string>
    <string name="num_two">2</string>
    <string name="num_three">3</string>
    <string name="num_four">4</string>
    <string name="num_five">5</string>
    <string name="num_six">6</string>
    <string name="num_seven">7</string>
    <string name="num_eight">8</string>
    <string name="num_nine">9</string>


</resources>
